# QueryForge

./: .gitignore  CLAUDE.md  CMakeLists.txt  QueryForge_Project.docx  README.md
backend/: README.md  __init__.py  app.py  requirements.txt  smoke_test.py
bench/: CMakeLists.txt  distance_bench.cpp  smoke_bench.cpp
docs/: BASELINES.md  CHANGELOG.md  HANDOFF.md  OBSERVATIONS.md  architecture.md
frontend/: README.md  index.html
include/queryforge/: distance.hpp  hnsw.hpp  nsw.hpp  types.hpp  version.hpp
python/: CMakeLists.txt  README.md  bindings.cpp  example.py  requirements.txt
python/qf_pipeline/: __init__.py  build_real.py  dry_run.py  embedder.py  metadata.py  pipeline.py  rebuild_index.py  synthetic.py
src/: CMakeLists.txt  distance.cpp  hnsw.cpp  nsw.cpp  persistence.cpp  version.cpp  visited_set.hpp
tests/: CMakeLists.txt  distance_test.cpp  hnsw_test.cpp  nsw_test.cpp  persistence_test.cpp  smoke_test.cpp
tools/: CMakeLists.txt  README.md  bruteforce.hpp  persist.cpp  recall.cpp
